# Puzzle

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  image_manager.cpp  image_manager.h  main.cpp  piece_manager.cpp  piece_manager.h  puzzle.cpp  puzzle.h  types.h
src/resources/: qml.qrc
src/resources/images/: japanPuzzle
src/resources/qml/: ControlButton.qml  Controls.qml  Dashboard.qml  GameArea.qml  MainMenu.qml  Piece.qml  PieceBorders.qml  PuzzleMenuBar.qml  main.qml
